add_executable(StockPriceFluctuation StockPriceFluctuation.cpp)
target_link_libraries(StockPriceFluctuation PUBLIC spdlog::spdlog)

add_executable(MeetingRoomsII MeetingRoomsII.cpp)
target_link_libraries(MeetingRoomsII PUBLIC spdlog::spdlog)

add_executable(RankTeamsByVotes RankTeamsByVotes.cpp)
target_link_libraries(RankTeamsByVotes PUBLIC spdlog::spdlog)

add_executable(KokoEatingBananas KokoEatingBananas.cpp)
target_link_libraries(KokoEatingBananas PUBLIC spdlog::spdlog)

add_executable(MergeIntervals MergeIntervals.cpp)
target_link_libraries(MergeIntervals PUBLIC spdlog::spdlog)

add_executable(LowestCommonAncestor LowestCommonAncestor.cpp)
target_link_libraries(LowestCommonAncestor PUBLIC spdlog::spdlog)

add_executable(DesignSnakeGame DesignSnakeGame.cpp)
target_link_libraries(DesignSnakeGame PUBLIC spdlog::spdlog)